[tool.poetry]
name = "flask-esk"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@domain.com>"]
readme = "README.md"
packages = [{include = "flask_esk"}]

[tool.poetry.dependencies]
flask = "^2.2.2"
pytest = "^7.2.1"
coverage = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
